feat(ai): 优化AI助手面板中的节点连接逻辑
- 将PortMeta记录类的数据类型字段从String改为NodeDataType
- 添加filterValidInferredConnections方法用于过滤有效的推断连接
- 在自动连接构建后验证连接的有效性并过滤掉无效连接
- 更新端口元数据创建逻辑以使用NodeDataType对象而非ID字符串
- 优化类型兼容性检查逻辑，使用NodeDataType.isConnectableTo方法替代手动比较
- 修复输入端口自动连线判断中的数据类型处理逻辑